# g-guid

./: .gitignore  .pre-commit-config.yaml  main.py  package-lock.json  pyproject.toml  run_backend.sh  set_up.md  todo.md
alembic/: env.py
alembic/versions/: 87444ee07147_create_user_and_exercise_table_.py  (+2 more)
api/: base.py
backend/: authentication.md  main.py  manage.py  pyproject.toml  set_up.md  todo.md
backend/alembic/: env.py
backend/alembic/versions/: 1fe9ebec49bf_product_composition.py  4b6a51c13d63_set_cascade_deletions.py  99bc1c4e8e08_user_subscription.py  c2b34fb2fed4_add_ru_title.py  c88a155d1dbb_product_categort_delete.py  f0c24948bf72_initial_migration.py  f162d89fcb0b_user_roles.py  f4a13c357e31_fcd_id_optional_field.py
backend/api/: base.py
backend/api/v1/: route_auth.py  route_exercise.py  route_product.py  route_user.py
backend/core/: config.py  constants.py  hashing.py  pagination.py  security.py
backend/db/: base.py  db.py
backend/db/models/: exersices.py  products.py  users.py
backend/db/repository/: exercises.py  login.py  products.py  repository.py  users.py
backend/schemas/: exercises.py  products.py  users.py
backend/services/: translation.py
backend/services/products/: crud.py  management.py
backend/tests/: conftest.py
backend/tests/rest_routes/: test_auth.py  test_exercise.py  test_products.py  test_user.py
backend/tests/utils/: exercise.py  user.py
backend/utils/: dependencies.py
backend/utils/data_import/scripts/: dump_db_data.py
backend/utils/management/: create_superuser.py
core/: config.py  hashing.py  security.py
db/: base.py  db.py
frontend/: package-lock.json  package.json
schemas/: exercises.py  users.py
t_bot/: pyproject.toml
t_bot/src/: api_service.py  cache_service.py  config.py  main.py  utils.py
tests/: conftest.py
(+47 files in other folders)
